--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".TermsActivity">
 
-    <Button
+    <ImageButton
         android:id="@+id/BTCloseTerms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="X"
+        android:src="@drawable/ic_baseline_clear_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
