--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -36,12 +36,11 @@
 
     <TextView
         android:id="@+id/TVTextOfTerms"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_margin="16dp"
         android:text="@string/Lorem"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TVAppName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
