--- a/app/src/main/res/layout/suggestion_item.xml
+++ b/app/src/main/res/layout/suggestion_item.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     app:cardBackgroundColor="@color/light_blue">
 
     <TextView
@@ -14,12 +17,13 @@
         android:textSize="32sp"
         android:hint="@string/suggestion" />
 
-    <Button
-        android:id="@+id/btnGoSuggestion"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=">"
-        android:layout_gravity="end"/>
+        android:textSize="32sp"
+        android:textStyle="bold"
+        android:layout_gravity="end" />
 
     <View
         android:id="@+id/dividerCards"
