--- a/app/src/main/res/layout/activity_random.xml
+++ b/app/src/main/res/layout/activity_random.xml
@@ -24,6 +24,8 @@
         android:layout_marginTop="24dp"
         android:text="@string/randomTitle"
         android:gravity="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/BTNBackR"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,11 +33,16 @@
 
     <TextView
         android:id="@+id/TVSuggestDescriptionR"
-        android:layout_width="199dp"
+        android:layout_width="0dp"
         android:layout_height="140dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text=""
+        android:layout_marginEnd="32dp"
         android:gravity="center"
+        android:hint="@string/app_name"
+        android:text=""
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,38 +73,42 @@
         android:layout_width="128dp"
         android:layout_height="32dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="88dp"
         android:text="@string/participants"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/IVParticipantsR"
         app:layout_constraintStart_toEndOf="@+id/IVParticipantsR"
-        app:layout_constraintTop_toBottomOf="@+id/TVSuggestDescriptionR" />
+        app:layout_constraintTop_toTopOf="@+id/IVParticipantsR" />
 
     <TextView
         android:id="@+id/TVPriceR"
         android:layout_width="128dp"
         android:layout_height="32dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="36dp"
         android:text="@string/price"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/IVPriceR"
         app:layout_constraintStart_toEndOf="@+id/IVPriceR"
-        app:layout_constraintTop_toBottomOf="@+id/TVParticipantLabelR" />
+        app:layout_constraintTop_toTopOf="@+id/IVPriceR" />
 
     <TextView
         android:id="@+id/TVParticipantResultR"
         android:layout_width="109dp"
         android:layout_height="32dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="88dp"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/TVParticipantLabelR"
         app:layout_constraintStart_toEndOf="@+id/TVParticipantLabelR"
-        app:layout_constraintTop_toBottomOf="@+id/TVSuggestDescriptionR" />
+        app:layout_constraintTop_toTopOf="@+id/TVParticipantLabelR" />
 
     <TextView
         android:id="@+id/TVPriceResultR"
         android:layout_width="109dp"
         android:layout_height="32dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="36dp"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/TVPriceR"
         app:layout_constraintStart_toEndOf="@+id/TVPriceR"
-        app:layout_constraintTop_toBottomOf="@+id/TVParticipantResultR" />
+        app:layout_constraintTop_toTopOf="@+id/TVPriceR" />
 
     <ImageView
         android:id="@+id/IVTypeR"
@@ -114,9 +125,10 @@
         android:layout_width="128dp"
         android:layout_height="32dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="24dp"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/IVTypeR"
         app:layout_constraintStart_toEndOf="@+id/IVTypeR"
-        app:layout_constraintTop_toBottomOf="@+id/TVPriceR" />
+        app:layout_constraintTop_toTopOf="@+id/IVTypeR" />
 
     <Button
         android:id="@+id/BTNTryAnotherR"
